<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.voterInfo.election.name}"
                tools:text="Election name"
                style="@style/toolbar_title_style" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/election_information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/election_information_text"
            app:layout_constraintStart_toStartOf="@+id/election_date"
            app:layout_constraintTop_toBottomOf="@+id/election_date"
            tools:text="election_information_text"
            style="@style/title_style"/>

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{viewmodel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:layout_editor_absoluteX="8dp"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/election_info_text"
            app:layout_constraintStart_toStartOf="@+id/state_locations"
            app:layout_constraintTop_toBottomOf="@+id/election_information_text"
            tools:text="Election info"
            style="@style/voter_info_links_info_style"/>

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/voting_location_text"
            app:layout_constraintStart_toStartOf="@+id/state_ballot"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="Voting location"
            style="@style/voter_info_links_info_style"/>

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ballot_info_text"
            app:layout_constraintStart_toStartOf="@+id/state_correspondence_header"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:text="Ballot Info"
            style="@style/voter_info_links_info_style"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/voter_info_links_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/election_administration_address_text"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="state_correspondence_header" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewmodel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="address" />

        <Button
            android:id="@+id/save_remove_election_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="@{() -> viewmodel.onButtonClicked()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Save/remove election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>